ChangeLog

Version 6.4.0, 14 March 2025
[FEATURE] Index tag titles as hidden content, https://github.com/tpwd/ke_search/issues/183
[FEATURE] Set default sorting direction for "customranking" to "desc". Thanks to Markus Hackel. https://github.com/tpwd/ke_search/issues/279
[BUGFIX]  Fix typo in constants.typoscript filename. Thanks to nebrot. https://github.com/tpwd/ke_search/commit/e762364111a78ea8b2378b634ca7cf77d3ae0903#r151745378
[BUGFIX]  Prevent undefined array key in page indexer. Thanks to Markus Hackel. https://github.com/tpwd/ke_search/pull/283
[TASK]    Migrate usage of StandaloneView to ViewFactoryInterface. https://github.com/tpwd/ke_search/issues/249
[TASK]    Index content elements inside a container element referenced via a shortcut. https://github.com/tpwd/ke_search/issues/246
[TASK]    Report error if no directories have been configured for file indexing. https://github.com/tpwd/ke_search/issues/281
[TASK]    Show status of cleanup process in indexer status (backend module and CLI)
[TASK]    Update backend icons, https://github.com/tpwd/ke_search/issues/108
[DOCS]    Add note about additional fields type (must be string). https://github.com/tpwd/ke_search/issues/248

Version 6.3.0, 24 January 2025
[FEATURE] Add support for site sets. https://github.com/tpwd/ke_search/issues/278
[BUGFIX]  Avoid PHP warning when saving category. Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/issues/276
[DOCS]    Add documentation about indexing content elements made with EXT:content_blocks. https://github.com/tpwd/ke_search/issues/254

Version 6.2.0, 17 January 2025
[FEATURE] Make it possible to add JOIN query part via "getQueryParts" hook. Thanks to André Müller
[BUGFIX]  Account for files without file extension. Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/pull/268
[BUGFIX]  Retain filter order from configuration. Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/pull/272