@@ -1,5 +1,8 @@
 ChangeLog
 
+Upcoming version
+[TASK]    Hide unnecessary pages and recursive settings in result list settings
+
 Version 6.4.0, 14 March 2025
 [FEATURE] Index tag titles as hidden content, https://github.com/tpwd/ke_search/issues/183
 [FEATURE] Set default sorting direction for "customranking" to "desc". Thanks to Markus Hackel. https://github.com/tpwd/ke_search/issues/279
